WIP syntax highlight options

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -13,35 +13,35 @@
 <h5 class="no-toc">Primary</h5>
 
 <ul class="no-bullets">
-    <li class="is-family-primary is-size-7">This is-size-7 text.</li>
-    <li class="is-family-primary is-size-6">This is-size-6 text.</li>
-    <li class="is-family-primary is-size-5">This is-size-5 text.</li>
-    <li class="is-family-primary is-size-4">This is-size-4 text.</li>
-    <li class="is-family-primary is-size-3">This is-size-3 text.</li>
-    <li class="is-family-primary is-size-2">This is-size-2 text.</li>
-    <li class="is-family-primary is-size-1">This is-size-1 text.</li>
+    <li class="is-family-primary is-size-7">size-7 text</li>
+    <li class="is-family-primary is-size-6">size-6 text</li>
+    <li class="is-family-primary is-size-5">size-5 text</li>
+    <li class="is-family-primary is-size-4">size-4 text</li>
+    <li class="is-family-primary is-size-3">size-3 text</li>
+    <li class="is-family-primary is-size-2">size-2 text</li>
+    <li class="is-family-primary is-size-1">size-1 text</li>
 </ul>
 
 <h5 class="no-toc">Secondary</h5>
 
 <ul class="no-bullets">
-    <li class="is-family-secondary is-size-7">This is-size-7 text.</li>
-    <li class="is-family-secondary is-size-6">This is-size-6 text.</li>
-    <li class="is-family-secondary is-size-5">This is-size-5 text.</li>
-    <li class="is-family-secondary is-size-4">This is-size-4 text.</li>
-    <li class="is-family-secondary is-size-3">This is-size-3 text.</li>
-    <li class="is-family-secondary is-size-2">This is-size-2 text.</li>
-    <li class="is-family-secondary is-size-1">This is-size-1 text.</li>
+    <li class="is-family-secondary is-size-7">size-7 text</li>
+    <li class="is-family-secondary is-size-6">size-7 text</li>
+    <li class="is-family-secondary is-size-5">size-7 text</li>
+    <li class="is-family-secondary is-size-4">size-7 text</li>
+    <li class="is-family-secondary is-size-3">size-7 text</li>
+    <li class="is-family-secondary is-size-2">size-7 text</li>
+    <li class="is-family-secondary is-size-1">size-7 text</li>
 </ul>
 
 <h5 class="no-toc">Monospace</h5>
 
 <ul class="no-bullets">
-    <li class="is-family-monospace is-size-7">This is-size-7 text.</li>
-    <li class="is-family-monospace is-size-6">This is-size-6 text.</li>
-    <li class="is-family-monospace is-size-5">This is-size-5 text.</li>
-    <li class="is-family-monospace is-size-4">This is-size-4 text.</li>
-    <li class="is-family-monospace is-size-3">This is-size-3 text.</li>
-    <li class="is-family-monospace is-size-2">This is-size-2 text.</li>
-    <li class="is-family-monospace is-size-1">This is-size-1 text.</li>
+    <li class="is-family-monospace is-size-7">size-7 text</li>
+    <li class="is-family-monospace is-size-6">size-7 text</li>
+    <li class="is-family-monospace is-size-5">size-7 text</li>
+    <li class="is-family-monospace is-size-4">size-7 text</li>
+    <li class="is-family-monospace is-size-3">size-7 text</li>
+    <li class="is-family-monospace is-size-2">size-7 text</li>
+    <li class="is-family-monospace is-size-1">size-7 text</li>
 </ul>
