--- a/_sass/yolo/_theme.scss
+++ b/_sass/yolo/_theme.scss
@@ -7,8 +7,7 @@
 // ----------------------------------------------------------------------------
 .yolo-themed {
   body {
-    //color: var(--on-primary-color);
-    color: $corbs-color;
+    color: var(--on-primary-color);
     background-color: var(--primary-color);
     font-family: var(--font-family-primary);
   }
