--- a/_sass/yolo/syntax-scheme/_yolo.scss
+++ b/_sass/yolo/syntax-scheme/_yolo.scss
@@ -1,6 +1,18 @@
 // ----------------------------------------------------------------------------
-// Syntax highlighting colors on dark container background
+// yolo scheme
 // ----------------------------------------------------------------------------
+:root[light] {
+  --syntax01: #a0a0a0;
+  --syntax02: #e4e8eb;
+  --syntax03: #dfe2e5;
+  --syntax04: #ffab00;
+  --syntax05: #e040fb;
+  --syntax06: #00e676;
+  --syntax07: #4ffbfb;
+  --syntax08: #609dfc;
+  --syntax09: #bd9ef8;
+  --syntax10: #ff4081;
+}
 :root[dark] {
   --syntax01: #a0a0a0;
   --syntax02: #e4e8eb;
