--- a/_sass/yolo/themes/_solo.scss
+++ b/_sass/yolo/themes/_solo.scss
@@ -31,7 +31,7 @@
   // font families
   --font-family-primary: "Inconsolata", monospace;
   --font-family-secondary: "Montserrat", sans-serif;
-  --font-family-monospace: "Inconsolata", monospace;
+  --font-family-monospace: "Source Code Pro", monospace;
 }
 :root[dark] {
   // primary colors
@@ -63,5 +63,5 @@
   // font families
   --font-family-primary: "Inconsolata", monospace;
   --font-family-secondary: "Montserrat", sans-serif;
-  --font-family-monospace: "Inconsolata", monospace;
+  --font-family-monospace: "Source Code Pro", monospace;
 }
