--- a/_sass/yolo/syntax-scheme/_alpha.scss
+++ b/_sass/yolo/syntax-scheme/_alpha.scss
@@ -2,26 +2,24 @@
 // alpha scheme
 // ----------------------------------------------------------------------------
 :root[light] {
-  --syntax01: #9e9e9e;
-  --syntax02: #e0e0e0;
-  --syntax03: #424242; // not used? For .hll, what is that?
-  --syntax04: #fb8d00;
-  --syntax05: #e03ffb;
-  --syntax06: #00c854;
-  --syntax07: #0bbcd4;
-  --syntax08: #1d75d3;
-  --syntax09: #5f35b1;
-  --syntax10: #d50201;
+  --syntax01: #757575;
+  --syntax02: #424242;
+  --syntax04: #d50201;
+  --syntax05: #ff6d00;
+  --syntax06: #ffd701;
+  --syntax07: #00c854;
+  --syntax08: #0bb8d5;
+  --syntax09: #324eff;
+  --syntax10: #6200ea;
 }
 :root[dark] {
   --syntax01: #9e9e9e;
   --syntax02: #e0e0e0; //
-  --syntax03: #cfd8dd; // not used? For .hll, what is that?
   --syntax04: #ff4082; //
   --syntax05: #ffab40; //
   --syntax06: #ffff04; //
   --syntax07: #01e676; //
   --syntax08: #1bffff; //
-  --syntax09: #42c5ff; //
+  --syntax09: #4689ff; //
   --syntax10: #7d4cff; //
 }
