--- a/_sass/yolo/syntax-scheme/_grayscale.scss
+++ b/_sass/yolo/syntax-scheme/_grayscale.scss
@@ -1,181 +1,181 @@
 :root[light] {
-  --syntax-text: #f8f8f2;
-  --syntax-container-color: #282a36;
+  --syntax-text: #44475a;
+  --syntax-container-color: #F4F4F4;
   --syntax-highlight-color: #44475a;
 
-  --syntax-line-number-color: #63efff;
-  --syntax-line-number-background-color: #44475a;
-  --syntax-line-number-special-color: #50fa7b;
-  --syntax-line-number-special-background-color: #6272a4;
+  --syntax-line-number-color: #44475a;
+  --syntax-line-number-background-color: #F4F4F4;
+  --syntax-line-number-special-color: #44475a;
+  --syntax-line-number-special-background-color: #F4F4F4;
 
-  --syntax-error: #f8f8f2;
-  --syntax-punctuation: #f8f8f2;
-  --syntax-text-whitespace: #f8f8f2;
+  --syntax-error: #898989; 
+  --syntax-punctuation: #44475a;
+  --syntax-text-whitespace: #bbbbbb; 
 
-  --syntax-comment-hashbang: #6272a4;
-  --syntax-comment-multiline: #6272a4;
-  --syntax-comment-preproc: #ff79c6;
-  --syntax-comment-preprocfile: #ff79c6;
-  --syntax-comment-single: #6272a4;
-  --syntax-comment-special: #6272a4;
-  --syntax-comment: #6272a4;
+  --syntax-comment-hashbang: #959595; 
+  --syntax-comment-multiline: #959595; 
+  --syntax-comment-preproc: #575757; 
+  --syntax-comment-preprocfile: #959595; 
+  --syntax-comment-single: #959595; 
+  --syntax-comment-special: #959595; 
+  --syntax-comment: #959595; 
 
-  --syntax-generic-deleted: #8b080b;
-  --syntax-generic-emph: #f8f8f2;
-  --syntax-generic-error: #f8f8f2;
-  --syntax-generic-heading: #f8f8f2;
-  --syntax-generic-inserted: #f8f8f2;
-  --syntax-generic-output: #44475a;
-  --syntax-generic-prompt: #f8f8f2;
-  --syntax-generic-strong: #f8f8f2;
-  --syntax-generic-subheading: #f8f8f2;
-  --syntax-generic-traceback: #f8f8f2;
+  --syntax-generic-deleted: #545454; 
+  --syntax-generic-emph: #545454; 
+  --syntax-generic-error: #898989; 
+  --syntax-generic-heading: #373737; 
+  --syntax-generic-inserted: #7D7D7D; 
+  --syntax-generic-output: #888888; 
+  --syntax-generic-prompt: #7E7E7E; 
+  --syntax-generic-strong: #373737; 
+  --syntax-generic-subheading: #5A5A5A; 
+  --syntax-generic-traceback: #6D6D6D; 
 
-  --syntax-keyword-constant: #ff79c6;
-  --syntax-keyword-declaration: #8be9fd;
-  --syntax-keyword-namespace: #ff79c6;
-  --syntax-keyword-pseudo: #ff79c6;
-  --syntax-keyword-reserved: #ff79c6;
-  --syntax-keyword-type: #8be9fd;
-  --syntax-keyword: #ff79c6;
+  --syntax-keyword-constant: #575757; 
+  --syntax-keyword-declaration: #575757; 
+  --syntax-keyword-namespace: #575757; 
+  --syntax-keyword-pseudo: #575757; 
+  --syntax-keyword-reserved: #575757; 
+  --syntax-keyword-type: #4F4F4F; 
+  --syntax-keyword: #575757; 
 
-  --syntax-literal-date: #f8f8f2;
-  --syntax-literal: #f8f8f2;
+  --syntax-literal-date: #44475a;
+  --syntax-literal: #44475a;
 
-  --syntax-name-attribute: #50fa7b;
-  --syntax-name-builtin-pseudo: #f8f8f2;
-  --syntax-name-builtin: #8be9fd;
-  --syntax-name-class: #50fa7b;
-  --syntax-name-constant: #f8f8f2;
-  --syntax-name-decorator: #f8f8f2;
-  --syntax-name-entity: #f8f8f2;
-  --syntax-name-exception: #f8f8f2;
-  --syntax-name-function-magic: #50fa7b;
-  --syntax-name-function: #50fa7b;
-  --syntax-name-label: #8be9fd;
-  --syntax-name-namespace: #f8f8f2;
-  --syntax-name-other: #f8f8f2;
-  --syntax-name-tag: #ff79c6;
-  --syntax-name-variable-class: #8be9fd;
-  --syntax-name-variable-global: #8be9fd;
-  --syntax-name-variable-instance: #8be9fd;
-  --syntax-name-variable: #8be9fd;
-  --syntax-name: #f8f8f2;
+  --syntax-name-attribute: #707070; 
+  --syntax-name-builtin-pseudo: #575757; 
+  --syntax-name-builtin: #575757; 
+  --syntax-name-class: #7E7E7E; 
+  --syntax-name-constant: #A5A5A5; 
+  --syntax-name-decorator: #555555; 
+  --syntax-name-entity: #848484; 
+  --syntax-name-exception: #575757; 
+  --syntax-name-function-magic: #3F3F3F; 
+  --syntax-name-function: #3F3F3F; 
+  --syntax-name-label: #363636; 
+  --syntax-name-namespace: #7E7E7E; 
+  --syntax-name-other: #9A9A9A; 
+  --syntax-name-tag: #3B3B3B; 
+  --syntax-name-variable-class: #9A9A9A; 
+  --syntax-name-variable-global: #9A9A9A; 
+  --syntax-name-variable-instance: #9A9A9A; 
+  --syntax-name-variable: #9A9A9A; 
+  --syntax-name: #44475a;
 
-  --syntax-number-bin: #ffb86c;
-  --syntax-number-float: #ffb86c;
-  --syntax-number-hex: #ffb86c;
-  --syntax-number-integer-long: #ffb86c;
-  --syntax-number-integer: #ffb86c;
-  --syntax-number-oct: #ffb86c;
-  --syntax-number: #ffb86c;
+  --syntax-number-bin: #888888; 
+  --syntax-number-float: #888888; 
+  --syntax-number-hex: #888888; 
+  --syntax-number-integer-long: #888888; 
+  --syntax-number-integer: #888888; 
+  --syntax-number-oct: #888888; 
+  --syntax-number: #888888; 
 
-  --syntax-operator-word: #ff79c6;
-  --syntax-operator: #ff79c6;
+  --syntax-operator-word: #575757; 
+  --syntax-operator: #666666; 
 
-  --syntax-string-affix: #bd93f9;
-  --syntax-string-backtick: #bd93f9;
-  --syntax-string-char: #bd93f9;
-  --syntax-string-delimiter: #bd93f9;
-  --syntax-string-doc: #bd93f9;
-  --syntax-string-double: #bd93f9;
-  --syntax-string-escape: #bd93f9;
-  --syntax-string-heredoc: #bd93f9;
-  --syntax-string-interpol: #bd93f9;
-  --syntax-string-other: #bd93f9;
-  --syntax-string-regex: #bd93f9;
-  --syntax-string-single: #bd93f9;
-  --syntax-string-symbol: #bd93f9;
-  --syntax-string: #bd93f9;
+  --syntax-string-affix: #717171;
+  --syntax-string-backtick: #717171;
+  --syntax-string-char: #717171;
+  --syntax-string-delimiter: #717171;
+  --syntax-string-doc: #717171;
+  --syntax-string-double: #717171;
+  --syntax-string-escape: #717171;
+  --syntax-string-heredoc: #717171;
+  --syntax-string-interpol: #9F9F9F;
+  --syntax-string-other: #7E7E7E;
+  --syntax-string-regex: #575757;
+  --syntax-string-single: #717171;
+  --syntax-string-symbol: #676767;
+  --syntax-string: #717171; 
 }
 :root[dark] {
-  --syntax-text: #f8f8f2;
-  --syntax-container-color: #282a36;
+  --syntax-text: #44475a;
+  --syntax-container-color: #F4F4F4;
   --syntax-highlight-color: #44475a;
 
-  --syntax-line-number-color: #63efff;
-  --syntax-line-number-background-color: #44475a;
-  --syntax-line-number-special-color: #50fa7b;
-  --syntax-line-number-special-background-color: #6272a4;
+  --syntax-line-number-color: #44475a;
+  --syntax-line-number-background-color: #F4F4F4;
+  --syntax-line-number-special-color: #44475a;
+  --syntax-line-number-special-background-color: #F4F4F4;
 
-  --syntax-error: #f8f8f2;
-  --syntax-punctuation: #f8f8f2;
-  --syntax-text-whitespace: #f8f8f2;
+  --syntax-error: #898989; 
+  --syntax-punctuation: #44475a;
+  --syntax-text-whitespace: #bbbbbb; 
 
-  --syntax-comment-hashbang: #6272a4;
-  --syntax-comment-multiline: #6272a4;
-  --syntax-comment-preproc: #ff79c6;
-  --syntax-comment-preprocfile: #ff79c6;
-  --syntax-comment-single: #6272a4;
-  --syntax-comment-special: #6272a4;
-  --syntax-comment: #6272a4;
+  --syntax-comment-hashbang: #959595; 
+  --syntax-comment-multiline: #959595; 
+  --syntax-comment-preproc: #575757; 
+  --syntax-comment-preprocfile: #959595; 
+  --syntax-comment-single: #959595; 
+  --syntax-comment-special: #959595; 
+  --syntax-comment: #959595; 
 
-  --syntax-generic-deleted: #8b080b;
-  --syntax-generic-emph: #f8f8f2;
-  --syntax-generic-error: #f8f8f2;
-  --syntax-generic-heading: #f8f8f2;
-  --syntax-generic-inserted: #f8f8f2;
-  --syntax-generic-output: #44475a;
-  --syntax-generic-prompt: #f8f8f2;
-  --syntax-generic-strong: #f8f8f2;
-  --syntax-generic-subheading: #f8f8f2;
-  --syntax-generic-traceback: #f8f8f2;
+  --syntax-generic-deleted: #545454; 
+  --syntax-generic-emph: #545454; 
+  --syntax-generic-error: #898989; 
+  --syntax-generic-heading: #373737; 
+  --syntax-generic-inserted: #7D7D7D; 
+  --syntax-generic-output: #888888; 
+  --syntax-generic-prompt: #7E7E7E; 
+  --syntax-generic-strong: #373737; 
+  --syntax-generic-subheading: #5A5A5A; 
+  --syntax-generic-traceback: #6D6D6D; 
 
-  --syntax-keyword-constant: #ff79c6;
-  --syntax-keyword-declaration: #8be9fd;
-  --syntax-keyword-namespace: #ff79c6;
-  --syntax-keyword-pseudo: #ff79c6;
-  --syntax-keyword-reserved: #ff79c6;
-  --syntax-keyword-type: #8be9fd;
-  --syntax-keyword: #ff79c6;
+  --syntax-keyword-constant: #575757; 
+  --syntax-keyword-declaration: #575757; 
+  --syntax-keyword-namespace: #575757; 
+  --syntax-keyword-pseudo: #575757; 
+  --syntax-keyword-reserved: #575757; 
+  --syntax-keyword-type: #4F4F4F; 
+  --syntax-keyword: #575757; 
 
-  --syntax-literal-date: #f8f8f2;
-  --syntax-literal: #f8f8f2;
+  --syntax-literal-date: #44475a;
+  --syntax-literal: #44475a;
 
-  --syntax-name-attribute: #50fa7b;
-  --syntax-name-builtin-pseudo: #f8f8f2;
-  --syntax-name-builtin: #8be9fd;
-  --syntax-name-class: #50fa7b;
-  --syntax-name-constant: #f8f8f2;
-  --syntax-name-decorator: #f8f8f2;
-  --syntax-name-entity: #f8f8f2;
-  --syntax-name-exception: #f8f8f2;
-  --syntax-name-function-magic: #50fa7b;
-  --syntax-name-function: #50fa7b;
-  --syntax-name-label: #8be9fd;
-  --syntax-name-namespace: #f8f8f2;
-  --syntax-name-other: #f8f8f2;
-  --syntax-name-tag: #ff79c6;
-  --syntax-name-variable-class: #8be9fd;
-  --syntax-name-variable-global: #8be9fd;
-  --syntax-name-variable-instance: #8be9fd;
-  --syntax-name-variable: #8be9fd;
-  --syntax-name: #f8f8f2;
+  --syntax-name-attribute: #707070; 
+  --syntax-name-builtin-pseudo: #575757; 
+  --syntax-name-builtin: #575757; 
+  --syntax-name-class: #7E7E7E; 
+  --syntax-name-constant: #A5A5A5; 
+  --syntax-name-decorator: #555555; 
+  --syntax-name-entity: #848484; 
+  --syntax-name-exception: #575757; 
+  --syntax-name-function-magic: #3F3F3F; 
+  --syntax-name-function: #3F3F3F; 
+  --syntax-name-label: #363636; 
+  --syntax-name-namespace: #7E7E7E; 
+  --syntax-name-other: #9A9A9A; 
+  --syntax-name-tag: #3B3B3B; 
+  --syntax-name-variable-class: #9A9A9A; 
+  --syntax-name-variable-global: #9A9A9A; 
+  --syntax-name-variable-instance: #9A9A9A; 
+  --syntax-name-variable: #9A9A9A; 
+  --syntax-name: #44475a;
 
-  --syntax-number-bin: #ffb86c;
-  --syntax-number-float: #ffb86c;
-  --syntax-number-hex: #ffb86c;
-  --syntax-number-integer-long: #ffb86c;
-  --syntax-number-integer: #ffb86c;
-  --syntax-number-oct: #ffb86c;
-  --syntax-number: #ffb86c;
+  --syntax-number-bin: #888888; 
+  --syntax-number-float: #888888; 
+  --syntax-number-hex: #888888; 
+  --syntax-number-integer-long: #888888; 
+  --syntax-number-integer: #888888; 
+  --syntax-number-oct: #888888; 
+  --syntax-number: #888888; 
 
-  --syntax-operator-word: #ff79c6;
-  --syntax-operator: #ff79c6;
+  --syntax-operator-word: #575757; 
+  --syntax-operator: #666666; 
 
-  --syntax-string-affix: #bd93f9;
-  --syntax-string-backtick: #bd93f9;
-  --syntax-string-char: #bd93f9;
-  --syntax-string-delimiter: #bd93f9;
-  --syntax-string-doc: #bd93f9;
-  --syntax-string-double: #bd93f9;
-  --syntax-string-escape: #bd93f9;
-  --syntax-string-heredoc: #bd93f9;
-  --syntax-string-interpol: #bd93f9;
-  --syntax-string-other: #bd93f9;
-  --syntax-string-regex: #bd93f9;
-  --syntax-string-single: #bd93f9;
-  --syntax-string-symbol: #bd93f9;
-  --syntax-string: #bd93f9;
+  --syntax-string-affix: #717171;
+  --syntax-string-backtick: #717171;
+  --syntax-string-char: #717171;
+  --syntax-string-delimiter: #717171;
+  --syntax-string-doc: #717171;
+  --syntax-string-double: #717171;
+  --syntax-string-escape: #717171;
+  --syntax-string-heredoc: #717171;
+  --syntax-string-interpol: #9F9F9F;
+  --syntax-string-other: #7E7E7E;
+  --syntax-string-regex: #575757;
+  --syntax-string-single: #717171;
+  --syntax-string-symbol: #676767;
+  --syntax-string: #717171; 
 }
 
